--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "eslint-config-xo": "latest",
     "eslint-config-xo-typescript": "latest",
     "eslint-plugin-react": "latest",
-    "typescript": "^4.9.3"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
