--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "license": "The Unlicense",
   "private": true,
   "packageManager": "yarn@3.3.0",
+  "scripts": {
+    "build:ext": "NODE_ENV=production webpack --config webpack.config.js",
+    "watch:ext": "webpack --config webpack.config.js --watch"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
@@ -16,6 +20,7 @@
     "eslint-config-xo": "latest",
     "eslint-config-xo-typescript": "latest",
     "eslint-plugin-react": "latest",
+    "filemanager-webpack-plugin": "^8.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
