--- a/src/extension/manifest.base.json
+++ b/src/extension/manifest.base.json
@@ -4,7 +4,7 @@
     "manifest_version": 2,
     "content_scripts": [
         {
-          "matches": ["https://youtube.com/*", "https://www.youtu.be/*"],
+          "matches": ["https://*.youtube.com/*", "https://*.youtu.be/*"],
           "js": ["content-script.js"]
         }
       ],
