--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,7 @@
         "noFallthroughCasesInSwitch": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
+				"jsx": "react",
+				"esModuleInterop": true,
     }
 }
