--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
         "filemanager",
         "Jouvencel",
         "ytdpnl"
-    ]
+    ],
+		"spaces-inside-braces.enable": false,
+		"spaces-inside-braces.enableForBraces": false,
 }
