datasource and migrations initialization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "camelcase",
         "filemanager",
         "Jouvencel",
+        "typeorm",
         "ytdpnl"
     ],
 		"spaces-inside-braces.enable": false,
