--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "copy-webpack-plugin": "^11.0.0",
+    "editorconfig": "^1.0.1",
     "eslint": "^8.29.0",
     "eslint-config-xo": "latest",
     "eslint-config-xo-typescript": "latest",
