Admin model created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,7 @@
 		"jsx": "react",
 		"esModuleInterop": true,
 		"downlevelIteration": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
 	}
 }
