--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "test": "jest",
     "tdd": "jest --watch",
     "serve:dev": "NODE_ENV=development nodemon --watch src/server src/server/index.ts",
-    "watch:admin": "NODE_ENV=development webpack --config webpack.config.app.js --watch",
+    "watch:admin": "NODE_ENV=development webpack --config webpack.config.app.ts --watch",
     "dev": "./dev"
   },
   "devDependencies": {
     "@jest/globals": "^29.3.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-middleware": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "copy-webpack-plugin": "^11.0.0",
@@ -29,12 +32,15 @@
     "eslint-plugin-react": "latest",
     "filemanager-webpack-plugin": "^8.0.0",
     "nodemon": "^2.0.20",
+    "react-refresh": "^0.14.0",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-hot-middleware": "^2.25.3"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -46,6 +52,7 @@
     "@types/pg": "^8.6.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/webpack-hot-middleware": "^2.25.6",
     "@types/yaml": "^1.9.7",
     "express": "^4.18.2",
     "jest": "^29.3.1",
