--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@types/pg": "^8.6.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-router": "^5.1.19",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack-hot-middleware": "^2.25.6",
     "@types/yaml": "^1.9.7",
     "express": "^4.18.2",
@@ -60,6 +62,8 @@
     "postgres-migrations": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.6.0",
+    "react-router-dom": "^6.6.0",
     "typeorm": "^0.3.11",
     "typeorm-naming-strategies": "^4.1.0",
     "yaml": "^2.1.3"
