--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "private": true,
   "packageManager": "yarn@3.3.0",
   "scripts": {
-    "build:ext": "NODE_ENV=production webpack --config webpack.config.js",
-    "watch:ext": "webpack --config webpack.config.js --watch",
+    "build:ext": "NODE_ENV=production webpack --config webpack.config.extension.js",
+    "watch:ext": "webpack --config webpack.config.extension.js --watch",
     "test": "jest",
     "tdd": "jest --watch",
     "serve:dev": "NODE_ENV=development nodemon --watch src/server src/server/index.ts",
@@ -56,6 +56,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack-hot-middleware": "^2.25.6",
     "@types/yaml": "^1.9.7",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "pg": "^8.8.0",
@@ -64,6 +65,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.6.0",
     "react-router-dom": "^6.6.0",
+    "stream-browserify": "^3.0.0",
     "typeorm": "^0.3.11",
     "typeorm-naming-strategies": "^4.1.0",
     "yaml": "^2.1.3"
