--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack-hot-middleware": "^2.25.6",
     "@types/yaml": "^1.9.7",
+    "class-validator": "^0.14.0",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "jest": "^29.3.1",
