--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch:ext": "webpack --config webpack.config.extension.js --watch",
     "test": "jest",
     "tdd": "jest --watch",
-    "serve:dev": "NODE_ENV=development nodemon --watch src/server src/server/index.ts",
+    "serve:dev": "NODE_ENV=development nodemon --watch src/server src/server/server.ts",
     "watch:admin": "NODE_ENV=development webpack --config webpack.config.app.ts --watch",
     "dev": "./dev"
   },
@@ -31,6 +31,7 @@
     "eslint-config-xo-typescript": "latest",
     "eslint-plugin-react": "latest",
     "filemanager-webpack-plugin": "^8.0.0",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "react-refresh": "^0.14.0",
     "ts-jest": "^29.0.3",
@@ -49,6 +50,7 @@
     "@mui/material": "^5.11.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
+    "@types/nodemailer": "^6.4.7",
     "@types/pg": "^8.6.5",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
