--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack-hot-middleware": "^2.25.6",
     "@types/yaml": "^1.9.7",
+    "body-parser": "^1.20.1",
     "class-validator": "^0.14.0",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
