--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/nodemailer": "^6.4.7",
@@ -60,6 +61,7 @@
     "@types/yaml": "^1.9.7",
     "body-parser": "^1.20.1",
     "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "jest": "^29.3.1",
