send registration email confirmation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Jouvencel",
         "pmmmwh",
         "typeorm",
+        "YTDNPL",
         "ytdpnl"
     ],
 		"spaces-inside-braces.enable": false,
