--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
@@ -59,6 +60,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack-hot-middleware": "^2.25.6",
     "@types/yaml": "^1.9.7",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
