--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/nodemailer": "^6.4.7",
     "@types/pg": "^8.6.5",
     "@types/react": "^18.0.26",
@@ -68,6 +69,7 @@
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "jest": "^29.3.1",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "postgres-migrations": "^5.3.0",
     "react": "^18.2.0",
