--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,10 @@
 		"downlevelIteration": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
+		"typeRoots": ["node_modules/@types", "src/types"],
+	},
+	"include": ["src/**/*"],
+	"ts-node": {
+		"files": true,
 	}
 }
