--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^9.0.0",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
     "@types/pg": "^8.6.5",
     "@types/react": "^18.0.26",
@@ -70,6 +71,7 @@
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.8.0",
     "postgres-migrations": "^5.3.0",
     "react": "^18.2.0",
