--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "camelcase",
         "filemanager",
         "Jouvencel",
+        "mutler",
         "pmmmwh",
         "typeorm",
         "urlencode",
