--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/material": "^5.11.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^9.0.0",
@@ -68,6 +69,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
+    "csv-parse": "^5.3.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "jsonwebtoken": "^9.0.0",
