save experiment config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Jouvencel",
         "mutler",
         "pmmmwh",
+        "proba",
         "typeorm",
         "urlencode",
         "YTDNPL",
