--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build:ext": "NODE_ENV=production webpack --config webpack.config.extension.js",
     "build:server": "NODE_ENV=production tsc",
+    "build:app": "NODE_ENV=production webpack --config webpack.config.app.ts",
     "watch:ext": "webpack --config webpack.config.extension.js --watch",
     "test": "jest",
     "tdd": "jest --watch",
