--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:ext": "NODE_ENV=production webpack --config webpack.config.extension.js",
     "build:server": "NODE_ENV=production tsc",
     "build:app": "NODE_ENV=production webpack --config webpack.config.app.ts",
-    "watch:ext": "webpack --config webpack.config.extension.js --watch",
+    "watch:ext": "NODE_ENV=development webpack --config webpack.config.extension.js --watch",
     "test": "jest",
     "tdd": "jest --watch",
     "serve:dev": "NODE_ENV=development nodemon --watch src/server src/server/server.ts",
