fixed firefox permissions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,15 @@
     "cSpell.words": [
         "camelcase",
         "filemanager",
+        "fmdj",
         "Jouvencel",
         "mutler",
         "pmmmwh",
         "proba",
         "typeorm",
         "urlencode",
+        "youtu",
+        "ytdnlp",
         "YTDNPL",
         "ytdpnl"
     ],
