do not lose events

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "proba",
         "typeorm",
         "urlencode",
+        "uuidv",
         "youtu",
         "ytdnlp",
         "YTDNPL",
